# Born2Crysis

./: .README.md.swp  .gitignore  .gitmodules  .srcs  CMakeLists.txt  Makefile  README.md  TODO_LIST  another  auteur  doom-nukem  editor_interface.psd  lol  lolol  output  pseudo asm.txt  test.b2cm  truc
Makefiles/: Makefile.gen  Makefile_template.mk  bin.mk  bin_template.mk  common.mk  common_second_pass.mk  default_var.mk  lib.mk  lib_template.mk
SDL_rudp/: .gitignore  .gitmodules  LICENSE  Makefile  README.md  test.c  test.txt
SDL_rudp/inc/: rudp.h
SDL_rudp/src/: rudp_object.c
assets/mtls/: assault.mtl  dust2.mtl  havana.mtl  house.mtl  india.mtl  militia.mtl  office.mtl  plane.mtl  stairs.mtl  untitled.mtl
assets/objects/: cat3.mtl  lamp2.mtl  office.mtl
assets/scripts/: jump.bmml  mpu.bmml  reset_jump.bmml
inc/: asm.h  bmml.h  bmml_constants.h  bmml_functions.h  bmml_structs.h  bmml_types.h  bodies.h  camera.h  doom-nukem.h  doom_nukem.h  editor.h  event_handler.h  gjk.h  graphics.h  inventory.h  inventory_manager.h  item.h  key_funcs.h  lights.h  map_file.h  menu.h  object_manager.h  objparser.h  perlin.h  physic.h  player.h  texture_manager.h  thread_pool.h  typedefs.h  utilities.h  world.h
libui/: .gitignore  .gitmodules  .srcs  CMakeLists.txt  Makefile
libui/inc/: libui.h  libui_animation.h  libui_callback.h  libui_env.h  libui_maths.h  libui_pixel.h  libui_surface.h  libui_text.h  libui_threads.h  libui_typedef.h  libui_widgets.h  libui_widgets_templates.h  libui_window.h
libui/src/: libui_call_back.c  (+4 more)
mflib/: Makefile  mflib.h
src/: main.c
(+650 files in other folders)
