cmake_minimum_required(VERSION 3.13)
project(doom-nukem)
set(CMAKE_CXX_STANDARD 14)
include_directories(inc /Users/hmartzol/.brew/include libui/inc SDL_rudp/inc)
add_subdirectory(libui/)
add_subdirectory(SDL_rudp/)
add_executable(doom-nukem src/main.c inc/doom-nukem.h inc/player.h inc/world.h inc/inventory.h)
