cmake_minimum_required(VERSION 3.13)
project(doom-nukem)
set(CMAKE_CXX_STANDARD 14)
include_directories(inc /Users/hmartzol/.brew/include libui/inc SDL_rudp/inc mflib)
add_subdirectory(libui/)
add_subdirectory(SDL_rudp/)
add_executable(doom-nukem src/env/env_destroy.c src/env/env_init.c src/main.c src/screen_states/game.c src/menu/launch_main_menu.c)
